# verus_rust_true

./: Cargo.toml  test_true.rs
