[package]
name = "verus_rust_true"

[dependencies]
vstd = { git = "https://github.com/verus-lang/verus", branch = "main" }
verus_builtin = { git = "https://github.com/verus-lang/verus", branch = "main" }
verus_builtin_macros = { git = "https://github.com/verus-lang/verus", branch = "main" }

[[bin]]
name = "verus_rust_true"
path = "src/verus_rust_true.rs"

[package.metadata.verus]
verify = true

