[package]
name = "test_true"

[dependencies]
vstd = { git = "https://github.com/verus-lang/verus", branch = "main" }
verus_builtin = { git = "https://github.com/verus-lang/verus", branch = "main" }
verus_builtin_macros = { git = "https://github.com/verus-lang/verus", branch = "main" }

[[bin]]
name = "test_true"
path = "src/test_true.rs"

[package.metadata.verus]
verify = true

